feat: 🎸 update zod model
